# FirstGameHS

./: .gitignore  FirstGameHS.cabal  README.md  stack.yaml
.stack-work/install/x86_64-linux-tinfo6-nopie/lts-10.7/8.2.2/flag-cache/: ghc-paths-0.1.0.9-jtXMj34IrEDKFvgWnrf0G  haskeline-0.7.4.2-FveYnsO43HLJrxPSFExTsX  intero-0.1.28  network-2.6.3.3-LsInmfJLY3IBO2L8iqXwV9  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  sdl2-2.3.0-I82q0vH717lA9yqNuFmBot  syb-0.7-3Lq8MQxmYP07qktjI1jxu0
Assets/: rogue.json
src/: AnimationLoader.hs  Animations.hs  Common.hs  Entity.hs  Game.hs  GameSetup.hs  GameState.hs  Guy.hs  InputModule.hs  Main.hs  SDLAnimations.hs
