name:                   FirstGameHS
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/crysikrend/FirstGameHS#readme
license:                BSD3
license-file:           LICENSE
author:                 Ashley Smith
maintainer:             ashley@aas.sh
copyright:              2018 Ashley Smith
category:               Game
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md
data-files:             Assets/*.bmp

executable FirstGameHS
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                        , sdl2
                        , pretty-simple
                        , directory
                        , aeson
                        , bytestring
  other-modules:        Paths_FirstGameHS
                        , Animations
